@@ -32,12 +32,13 @@ WriteMakefile(
         'Test::More'         => 0,
     },
     PREREQ_PM => {
-        'File::Find::Rule'  => 0,
-        'File::Path'        => 0,
-        'Module::Starter'   => 0,
-        'PPI'               => 0,
-        'Tie::File'         => 0,
-        'version'           => 0,
+        'File::Find::Rule'      => 0,
+        'File::Copy::Recursive' => 0,
+        'File::Path'            => 0,
+        'Module::Starter'       => 0,
+        'PPI'                   => 0,
+        'Tie::File'             => 0,
+        'version'               => 0,
     },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean => { FILES => 'STEVEB-Dist-Mgr-*' },
