@@ -28,15 +28,32 @@ my $h = Hook::Output::Tiny->new;
 
 remove_init();
 
-# good init
+# full run
 {
+    # Initialize
+
     before();
+
+    # Create the new dsitribution
 
     $h->hook('stderr');
     init(%module_args);
     $h->unhook('stderr');
 
-    check();
+    # Verify STDOUT from Module::Starter
+
+    my @stderr = $h->stderr;
+    is scalar @stderr, 11, "Module::Starter has proper print output";
+
+    #TODO: write function that copies the contents of the new dist into the
+    # repo dir
+
+    # Change into the new distribution's root directory
+
+    check_and_change_into_module_dir();
+
+    # Cleanup
+
     after();
 }
 
@@ -63,7 +80,7 @@ sub after {
     chdir $cwd or die $!;
     like getcwd(), qr/steveb-dist-mgr/, "back in root directory ok";
 }
-sub check {
+sub check_and_change_into_module_dir {
     is -d 'Test-Module', 1, "Test-Module directory created ok";
 
     chdir 'Test-Module' or die $!;
